# Until-Being-Crowned

./: CMakeLists.txt  README.md  vcpkg.json
src/: DialogMgr.cpp  DialogMgr.hpp  QuestMgr.cpp  Utils.hpp  main.cpp
src/Input/: Input.hpp  SFMLJoypad.hpp  SFMLKeyboard.hpp
src/Menu/: GameoverMenu.cpp  GenderMenu.cpp  InGameMenu.cpp  LoadingMenu.cpp  MainMenu.cpp  MenuMgr.hpp  OptionMenu.cpp  VictoryMenu.cpp
src/Rendering/: Screen.cpp  Screen.hpp
src/Resources/: Resources.hpp  Settings.hpp
